refactor(gradle): Move `subprojects` code to conventions
This continues the effort to reduce implicit project coupling.

Signed-off-by: Sebastian Schuberth <sebastian@doubleopen.org>